--- a/index.html
+++ b/index.html
@@ -3,48 +3,49 @@
     <head>
         <title>Makke a jQuery and CSS3 powered Lightbox Gallery</title>
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="lightbox">
             <h1>Lightbox</h1>
             <ul>
                 <li>
-                    <img src="http://thecodeplayer.com/uploads/media/lb1_small.png" data-large="http://thecodeplayer.com/uploads/media/lb1.png" />
+                    <img src="http://thecodeplayer.com/uploads/media/lb1_small.png" data-large="http://thecodeplayer.com/uploads/media/lb1.png"/>
                     <div class="image_title">
                         <h5 class="title">Ceiling Art</h5>
                     </div>
                 </li>
 
                 <li>
-                    <img src="http://thecodeplayer.com/uploads/media/lb2_small.png" data-large="http://thecodeplayer.com/uploads/media/lb2.png">
+                    <img src="http://thecodeplayer.com/uploads/media/lb2_small.png" data-large="http://thecodeplayer.com/uploads/media/lb2.png"/>
                     <div class="image_title">
                         <h5 class="title">Lit Curtain</h5>
                     </div>
                 </li>
 
                 <li>
-                    <img src="http://thecodeplayer.com/uploads/media/lb3_small.png" data-large="http://thecodeplayer.com/uploads/media/lb3.png">
+                    <img src="http://thecodeplayer.com/uploads/media/lb3_small.png" data-large="http://thecodeplayer.com/uploads/media/lb3.png"/>
                     <div class="image_title">
                         <h5 class="title">Ornamental Lights</h5>
                     </div>
                 </li>
 
                 <li>
-                    <img src="http://thecodeplayer.com/uploads/media/lb4_small.png" data-large="http://thecodeplayer.com/uploads/media/lb4.png">
+                    <img src="http://thecodeplayer.com/uploads/media/lb4_small.png" data-large="http://thecodeplayer.com/uploads/media/lb4.png"/>
                     <div class="image_title">
                         <h5 class="title">Cube Lights</h5>
                     </div>
                 </li>
 
                 <li>
-                    <img src="http://thecodeplayer.com/uploads/media/lb5_small.png" data-large="http://thecodeplayer.com/uploads/media/lb5.png">
+                    <img src="http://thecodeplayer.com/uploads/media/lb5_small.png" data-large="http://thecodeplayer.com/uploads/media/lb5.png"/>
                     <div class="image_title">
                         <h5 class="title">Damask 14</h5>
                     </div>
                 </li>
 
                 <li>
-                    <img src="http://thecodeplayer.com/uploads/media/lb6_small.png" data-large="http://thecodeplayer.com/uploads/media/lb6.png">
+                    <img src="http://thecodeplayer.com/uploads/media/lb6_small.png" data-large="http://thecodeplayer.com/uploads/media/lb6.png"/>
                     <div class="image_title">
                         <h5 class="title">Dark Lamp</h5>
                     </div>
@@ -53,7 +54,7 @@
         </div>
 
         <!-- PrefixFree -->
-        <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>   
+        <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script> 
         <script type="text/javascript" src="assets/js/script.js"></script>
     </body>
 </html>
